@@ -37,6 +37,8 @@ Here is a description of the modules:
  o plugins/nautilus-ext: An extension for Nautilus 2.10 and later.
 
  o plugins/gedit: The gedit plugin.
+ 
+ o plugins/applet: Clipboard encryption panel applet
 
  o src: The main app code. This currently includes the main window & dialogs,
    along with code that hasn't been deemed necessary to include in libseahorse.
@@ -68,7 +70,7 @@ below, and must be discussed before hand on the seahorse-devel mailing list.
    - libseahorse/seahorse-gpg-options.c
    
  o Photo ID support
-   - (not yet implemented) 
+   - gpgme_op_edit state machine in libseahorse/seahorse-pgp-key-op.c 
    
  o Export Secret Key Support 
    - (not yet implemented)
@@ -90,4 +92,4 @@ debugging helpers etc...
     When used with --enable-debug turns on fatal compile and runtime warnings.
 
 
-last updated 2005-08-13
+last updated 2006-01-24
