@@ -35,7 +35,9 @@ EXTRA_DIST = \
 	COPYING \
 	COPYING-DOCS \
 	ChangeLog \
+	HACKING \
 	INSTALL \
+	MAINTAINERS \
 	NEWS \
 	README \
 	THANKS \
