@@ -1,11 +1,12 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=Encryption Preferences
 _Comment=Configure key servers and other encryption settings
 Exec=seahorse-preferences
 Terminal=false
 Type=Application
 Icon=gnome-mime-application-pgp-keys.png
-Categories=Application;Settings;Advanced
+Categories=GNOME;GTK;Application;Settings;Advanced;
 StartupNotify=true
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=seahorse
