@@ -1,11 +1,12 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=Encryption Key Manager
 _Comment=Manage your encryption keys
 Exec=seahorse
 Terminal=false
 Type=Application
 Icon=seahorse.png
-Categories=Application;Cryptography;
+Categories=GNOME;GTK;Application;Cryptography;
 StartupNotify=true
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=seahorse
