@@ -1,3 +1,12 @@
+2006-01-24  Adam Schreiber  <sadam@clemson.edu>
+    * HACKING: updated file
+    * Makefile.am: Added MAINTAINERS and HACKING to EXTRA_DIST
+    * libseahorse/seahorse-pgp-key.c: Fix critical warning
+    (Bug #328472)
+    * plugins/nautilus/seahorse-pgp-preferences.desktop.in:
+    * src/seahorse.desktop.in: Corrected desktop files
+    (Bug #328457). Patch by Stephane Loeuillet.
+
 2006-01-23  Nate Nielsen  <nielsen@memberwebs.com>
 
 	* configure.in: Make avahi a soft dependency. 
